--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,20 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Registration"
-    android:background="@drawable/gradient_background">
+    android:background="#0F2355">
 
 
     <TextView
         android:layout_width="335dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="16dp"
         android:text="Registration"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="34dp"
         android:textStyle="bold"
-        android:textSize="24dp"
-        android:textColor="#0A4A48"
-        android:textAlignment="center"/>
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="587dp" />
 
+    <ImageView
+        android:layout_width=""
+        android:layout_height=""
     <EditText
         android:id="@+id/firsName"
         android:layout_width="335dp"
@@ -88,13 +91,32 @@
         android:id="@+id/skipBtn"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:background="@drawable/rounded_button"
+        android:backgroundTint="#e28743"
         android:text="Skip"
         android:textAlignment="center"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="223dp"
         tools:layout_editor_absoluteY="640dp"
-        android:color="#0A4A48"/>
+
+        >
+
+    </Button>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="90dp"
+        android:layout_height="69dp"
+        app:srcCompat="@drawable/app_icon_04"
+        tools:layout_editor_absoluteX="-9dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="249dp"
+        android:layout_height="92dp"
+        app:srcCompat="@drawable/logo_01"
+        tools:layout_editor_absoluteX="81dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
