--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -3,10 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#04132c"
-
-                android:endColor="#3b6bfb"
-
+                android:startColor="@color/gradient_start"
+                android:endColor="@color/gradient_end"
                 android:type="linear"
                 android:angle="-90"/>/>
         </shape>
