--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Home"
+    android:background="@drawable/gradient_background">
+
+    <TextView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/logo"
+        android:text="Insert Logo Here"
+        android:textSize="18sp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:id="@+id/account_ic"
+        android:layout_width="52dp"
+        android:layout_height="49dp"
+        android:src="@drawable/ic_baseline_account_circle_24"
+        app:layout_constraintBottom_toBottomOf="@id/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toEndOf="@id/logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/greeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Welcome!"
+        android:textSize="28sp"
+        android:layout_marginTop="120dp"
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/step_by_step"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Report Accident(Step-By-Step)"
+        android:layout_marginTop="120dp"
+        android:backgroundTint="@color/logo"
+        android:onClick="onClick"
+        app:layout_constraintTop_toBottomOf="@id/greeting"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:id="@+id/camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Camera"
+        android:backgroundTint="@color/logo"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/step_by_step"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/handbook"/>
+
+    <Button
+        android:id="@+id/handbook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Handbook"
+        android:backgroundTint="@color/logo"
+        app:layout_constraintBaseline_toBaselineOf="@id/camera"
+        app:layout_constraintTop_toBottomOf="@id/step_by_step"
+        app:layout_constraintStart_toEndOf="@id/camera"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/info_exchange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Information\n Exchange"
+        android:backgroundTint="@color/logo"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/camera"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/reports"/>
+
+    <Button
+        android:id="@+id/reports"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reports"
+        android:backgroundTint="@color/logo"
+        app:layout_constraintTop_toBottomOf="@id/handbook"
+        app:layout_constraintBaseline_toBaselineOf="@id/info_exchange"
+        app:layout_constraintStart_toEndOf="@id/info_exchange"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
