--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="btnColor">#549F93</color>
+
+    <color name="background">#0F2355</color>
+    <color name="logo">#3B6BfB</color>
+    <color name="gradient_start">#04132C</color>
+    <color name="gradient_end">#3B6BfB</color>
+
 </resources>
