--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,10 @@
     <TextView
         android:layout_width="335dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="27dp"
         android:text="Registration"
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -20,14 +24,18 @@
         tools:layout_editor_absoluteY="587dp" />
 
     <ImageView
-        android:layout_width=""
-        android:layout_height=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
     <EditText
-        android:id="@+id/firsName"
+        android:id="@+id/firstName"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="525dp"
         android:background="@drawable/rounded_corners"
-        android:text="  First Name"
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="112dp" />
 
@@ -35,8 +43,10 @@
         android:id="@+id/lastName"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="450dp"
         android:background="@drawable/rounded_corners"
-        android:text="  Last Name"
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="193dp" />
 
@@ -44,8 +54,10 @@
         android:id="@+id/Email"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="372dp"
         android:background="@drawable/rounded_corners"
-        android:text="  Email"
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="282dp" />
 
@@ -53,8 +65,11 @@
         android:id="@+id/password_toggle"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="403dp"
+        android:inputType="textPassword"
         android:background="@drawable/rounded_corners"
-        android:text="  Password"
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="365dp" />
 
@@ -62,8 +77,10 @@
         android:id="@+id/licNo"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="477dp"
         android:background="@drawable/rounded_corners"
-        android:text="  Licence No."
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="458dp" />
 
@@ -71,52 +88,124 @@
         android:id="@+id/policyNo"
         android:layout_width="335dp"
         android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="556dp"
         android:background="@drawable/rounded_corners"
-        android:text="  Policy No."
         tools:layout_editor_absoluteX="38dp"
         tools:layout_editor_absoluteY="542dp" />
 
     <Button
-        android:id="@+id/loginBtn"
+        android:id="@+id/loginToApp"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="640dp"
-        android:background="@drawable/rounded_button"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginBottom="50dp"
+        android:onClick="LoginToApp"
         android:text="Login"
         android:textAlignment="center"
-        />
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="640dp" />
 
     <Button
         android:id="@+id/skipBtn"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:backgroundTint="#e28743"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="49dp"
+
         android:text="Skip"
         android:textAlignment="center"
-        android:textStyle="bold"
         tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="640dp"
-
-        >
-
+        tools:layout_editor_absoluteY="640dp">
     </Button>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="90dp"
-        android:layout_height="69dp"
-        app:srcCompat="@drawable/app_icon_04"
-        tools:layout_editor_absoluteX="-9dp"
-        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="249dp"
         android:layout_height="92dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="54dp"
         app:srcCompat="@drawable/logo_01"
         tools:layout_editor_absoluteX="81dp"
         tools:layout_editor_absoluteY="0dp" />
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="147dp"
+        android:textSize="17sp"
+        android:text="First Name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="217dp"
+        android:textSize="17sp"
+        android:text="Last Name" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="294dp"
+        android:textSize="17sp"
+        android:text="Email" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:layout_marginBottom="338dp"
+        android:text="Password" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="260dp"
+        android:textSize="17sp"
+        android:text="License No." />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="45dp"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:layout_marginBottom="183dp"
+        android:text="Policy No." />
+
+
+</RelativeLayout>
