Added profile pages for vehicles and Insurance.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="logo">#3B6BfB</color>
     <color name="gradient_start">#04132C</color>
     <color name="gradient_end">#3B6BfB</color>
+    <color name="gray">#808080</color>
 
 </resources>
