--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,29 +7,25 @@
     tools:context=".Home"
     android:background="@drawable/gradient_background">
 
-    <TextView
+    <ImageView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/logo"
-        android:text="Insert Logo Here"
-        android:textSize="18sp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_height="55dp"
+        android:src="@drawable/logo_01"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/account_ic"
         android:layout_width="52dp"
         android:layout_height="49dp"
         android:src="@drawable/ic_baseline_account_circle_24"
-        app:layout_constraintBottom_toBottomOf="@id/logo"
+        android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toEndOf="@id/logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/greeting"
@@ -60,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Camera"
+        android:onClick="onClick"
         android:backgroundTint="@color/logo"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/step_by_step"
@@ -71,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Handbook"
+        android:onClick="onClick"
         android:backgroundTint="@color/logo"
         app:layout_constraintBaseline_toBaselineOf="@id/camera"
         app:layout_constraintTop_toBottomOf="@id/step_by_step"
@@ -82,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Information\n Exchange"
+        android:onClick="onClick"
         android:backgroundTint="@color/logo"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@id/camera"
@@ -93,6 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reports"
+        android:onClick="onClick"
         android:backgroundTint="@color/logo"
         app:layout_constraintTop_toBottomOf="@id/handbook"
         app:layout_constraintBaseline_toBaselineOf="@id/info_exchange"
