--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,114 +8,122 @@
     android:background="@color/background">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="335dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:text="Registration"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="34dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="587dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
     <EditText
         android:id="@+id/firsName"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  First Name"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="112dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/lastName"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  Last Name"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="193dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firsName" />
 
     <EditText
         android:id="@+id/Email"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  Email"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lastName" />
 
     <EditText
         android:id="@+id/password_toggle"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  Password"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="365dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <EditText
         android:id="@+id/licNo"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  Licence No."
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password_toggle" />
 
     <EditText
         android:id="@+id/policyNo"
         android:layout_width="335dp"
-        android:layout_height="34dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/rounded_corners"
         android:text="  Policy No."
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="542dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/licNo" />
 
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="150dp"
-        android:layout_height="40dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="640dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_button"
         android:text="Login"
         android:textAlignment="center"
-        />
+        android:onClick="onClick"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/policyNo" />
 
     <Button
         android:id="@+id/skipBtn"
         android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="#e28743"
         android:text="Skip"
         android:textAlignment="center"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="640dp"
-
-        >
-
-    </Button>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="90dp"
-        android:layout_height="69dp"
-        app:srcCompat="@drawable/app_icon_04"
-        tools:layout_editor_absoluteX="-9dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:onClick="onClick"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toEndOf="@+id/loginBtn"
+        app:layout_constraintTop_toBottomOf="@+id/policyNo" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="249dp"
         android:layout_height="92dp"
-        app:srcCompat="@drawable/logo_01"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_01" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
