--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,10 +42,9 @@
     <Button
         android:id="@+id/step_by_step"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="Report Accident(Step-By-Step)"
         android:layout_marginTop="120dp"
-        android:backgroundTint="@color/logo"
         android:onClick="onClick"
         app:layout_constraintTop_toBottomOf="@id/greeting"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,50 +52,52 @@
 
     <Button
         android:id="@+id/camera"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="Camera"
         android:onClick="onClick"
         android:backgroundTint="@color/logo"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="55dp"
         app:layout_constraintTop_toBottomOf="@id/step_by_step"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/handbook"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/handbook"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:text="Handbook"
-        android:onClick="onClick"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="55dp"
         android:backgroundTint="@color/logo"
+        android:onClick="onClick"
+        android:text="Handbook"
         app:layout_constraintBaseline_toBaselineOf="@id/camera"
-        app:layout_constraintTop_toBottomOf="@id/step_by_step"
-        app:layout_constraintStart_toEndOf="@id/camera"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/camera"
+        app:layout_constraintTop_toBottomOf="@id/step_by_step" />
 
     <Button
         android:id="@+id/info_exchange"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="Information\n Exchange"
         android:onClick="onClick"
         android:backgroundTint="@color/logo"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="55dp"
         app:layout_constraintTop_toBottomOf="@id/camera"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/reports"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/reports"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="Reports"
         android:onClick="onClick"
         android:backgroundTint="@color/logo"
+        android:layout_marginEnd="55dp"
         app:layout_constraintTop_toBottomOf="@id/handbook"
         app:layout_constraintBaseline_toBaselineOf="@id/info_exchange"
-        app:layout_constraintStart_toEndOf="@id/info_exchange"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
