--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="16dp"
-        android:onClick="ClickLogo"
         android:src="@drawable/logo2"/>
 
     <TextView
@@ -32,13 +32,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="clickLogin">
+        android:onClick="clickHome">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Login"
+            android:text="Home"
             android:padding="12dp"
             android:layout_marginStart="16dp"/>
 
