--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -83,8 +83,8 @@
                 android:layout_below="@+id/DOB"
                 android:layout_marginTop="50dp"
                 android:text="  4"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/license"
