Changed registering's layout and adjusted complete and register button to be one in the code

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="gradient_start">#04132C</color>
     <color name="gradient_end">#3B6BfB</color>
     <color name="gray">#808080</color>
-    <color name="backgroundColor">#0F2355</color>
+    <color name="backgroundColor2">#0F2355</color>
 
 </resources>
