--- a/app/src/main/res/layout/activity_vehicle_registration.xml
+++ b/app/src/main/res/layout/activity_vehicle_registration.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".vehicleRegistration"
-    android:background="@color/backgroundColor">
+    android:background="@color/backgroundColor2">
 
     <RelativeLayout
         android:id="@+id/mainLayout"
